<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_save"
        android:icon="@drawable/ic_menu_save"
        app:iconTint="?attr/colorOnPrimary"
        android:title="save"
        app:showAsAction="always" />
</menu>