...
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bar_point_primary" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:text="저장하기"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/urlScrollView"
...
