<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/linkItem"
        android:title="검색"
        android:enabled="true"
        android:icon="@drawable/ic_menu_search"
        />

    <item
        android:id="@+id/videoItem"
        android:title="비디오"
        android:enabled="true"
        android:icon="@drawable/ic_menu_video"
        />

    <item
        android:id="@+id/settingItem"
        android:title="설정"
        android:enabled="true"
        android:icon="@drawable/ic_menu_setting"
        />
</menu>