...
                android:id="@+id/tagChipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </ScrollView>

        <ImageView
            android:id="@+id/emptyImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/emptyTextView"
            app:layout_constraintEnd_toEndOf="@+id/scrollView2"
            app:layout_constraintStart_toStartOf="@+id/scrollView2"
            app:layout_constraintTop_toTopOf="@+id/scrollView2"
...
