<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_group_rename"
        android:title="그룹 이름 바꾸기"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_group_delete"
        android:title="그룹 삭제하기"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_group_edit"
        android:title="그룹 내 태그 관리하기"
        app:showAsAction="never" />
</menu>