...
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:background="@drawable/bg_shape_searchsett"
        android:paddingStart="15dp">

        <ImageView
            android:id="@+id/swapImageView"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="10dp"
            android:padding="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
...
        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/emptyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="비어 있는 그룹입니다."
            app:layout_constraintBottom_toBottomOf="@+id/tagChipGroup"
            app:layout_constraintEnd_toEndOf="@+id/tagChipGroup"
            app:layout_constraintStart_toStartOf="@+id/tagChipGroup"
            app:layout_constraintTop_toTopOf="@+id/tagChipGroup"
            app:layout_constraintVertical_bias="0.3" />

...
